--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 body {
-    font-family: "JetBrains Mono", "Microsoft YaHei", sans-serif;
+    font-family: "Maple Mono NF CN", "Microsoft YaHei", sans-serif;
 }
 
 * {
