--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: "Maple Mono NF CN";
+    src: url("../fonts/MapleMono-NF-CN-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
 body {
   margin: 0px;
   padding: 0px;
@@ -9,7 +17,7 @@ body {
 }
 
 body {
-    font-family: "Maple Mono NF CN", "Microsoft YaHei", sans-serif;
+    font-family: "Maple Mono NF CN";
 }
 
 * {
