--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-@font-face {
+/* @font-face {
     font-family: "Maple Mono NF CN";
     src: url("../fonts/MapleMono-NF-CN-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
-}
+} */
 
 body {
   margin: 0px;
@@ -16,9 +16,9 @@ body {
   justify-content: center;
 }
 
-body {
+/* body {
     font-family: "Maple Mono NF CN";
-}
+} */
 
 * {
   transition: 1s;
